--- a/index.html
+++ b/index.html
@@ -1,1 +1,79 @@
-hello
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8"/>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <title>My Portfolio</title>
+        <link rel="stylesheet" href="css/styles.css">
+        <link rel="stylesheet" href="css/glightbox.min.css">
+    </head>
+    <body>
+        <header class="hero-box">
+            <section class="hero-image-box">
+                <img class=hero-image src="img/Jennifer Benedict - Project 2.jpg" alt="colorful elephant pot">
+            </section>
+            <section class="hero-text-box">
+                <h1 class="hero-heading">Jennifer Benedict</h1>
+                <p class="hero-text">This is my portfolio, enjoy!</p>
+        </header>
+        <section class="portfolio-container">
+            <h1>Portfolio</h1>
+            <section class="portfolio-gallery">
+
+                <div class="gallery-item">
+                    <a class="glightbox" href="img/20211011_132515.jpg">
+                        <img src="img/20211011_132515.jpg" alt="" class="gallery-image">
+                    </a>
+                </div>
+
+                <div class="gallery-item">
+                    <a class="glightbox" href="img/Jennifer Benedict - Inherent Light.jpg">
+                        <img src="img/Jennifer Benedict - Inherent Light.jpg" alt="" class="gallery-image">
+                    </a>
+                </div>
+
+                <div class="gallery-item">
+                    <a class="glightbox" href="img/Jennifer Benedict - Book Cover Project.jpg">
+                        <img src="img/Jennifer Benedict - Book Cover Project.jpg" alt="" class="gallery-image">
+                    </a>
+                </div>
+
+                <div class="gallery-item">
+                    <a class="glightbox" href="img/Jennifer Benedict - Final Project.jpg">
+                        <img src="img/Jennifer Benedict - Final Project.jpg" alt="" class="gallery-image">
+                    </a>
+                </div>
+
+                <div class="gallery-item">
+                    <a class="glightbox" href="img/Jennifer Benedict - Observational.jpg">
+                        <img src="img/Jennifer Benedict - Observational.jpg" alt="" class="gallery-image">
+                    </a>
+                </div>
+
+                <div class="gallery-item">
+                    <a class="glightbox" href="img/Jennifer Benedict - Observational 2.jpg">
+                        <img src="img/Jennifer Benedict - Observational 2.jpg" alt="" class="gallery-image">
+                    </a>
+                </div>
+
+                <div class="gallery-item">
+                    <a class="glightbox" href="img/Jennifer Benedict - Project 2.jpg">
+                        <img src="img/Jennifer Benedict - Project 2.jpg" alt="" class="gallery-image">
+                    </a>
+                </div>
+
+                <div class="gallery-item">
+                    <a class="glightbox" href="img/Jennifer Benedict - Project 4A.png">
+                        <img src="img/Jennifer Benedict - Project 4A.png" alt="" class="gallery-image">
+                    </a>
+                </div>
+
+            </section>
+        </section>
+        <script src="JS/glightbox.min.js"></script>
+        <script type="text/javascript">
+            const lightbox = GLightbox({loop:true});
+        </script>
+    </body>
+</html>
