--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
             </section>
         </section>
-        <script src="JS/glightbox.min.js"></script>
+        <script src="js/glightbox.min.js"></script>
         <script type="text/javascript">
             const lightbox = GLightbox({loop:true});
         </script>
